--- a/LenKa-Django/LensaKata/LensaKata_App/templates/subscription.html
+++ b/LenKa-Django/LensaKata/LensaKata_App/templates/subscription.html
@@ -14,7 +14,7 @@
 <div class="container mt-5">
     <div class="mb-4">
         <a href="{% url 'langganan' %}" class="btn btn-back">
-            ← Kembali ke Halaman Langganan
+            ← Kembali ke Halaman Sebelumnya
         </a>
     </div>
     <!-- Bagian Header Judul -->
@@ -42,7 +42,7 @@
 
                 <!-- Tombol Bayar -->
                 <div class="d-flex justify-content-end mt-3">
-                    <button type="submit" class="btn btn-primary btn-lg">Bayar</button>
+                    <button type="submit" class="btn btn-primary btn-lg" style=" background-color: #257180">Bayar Sekarang</button>
                 </div>
             </form>
         </div>
