--- a/LenKa-Django/LensaKata/LensaKata_App/templates/langganan.html
+++ b/LenKa-Django/LensaKata/LensaKata_App/templates/langganan.html
@@ -4,7 +4,8 @@
 {% block title %}Beranda - LensaKata{% endblock %}
 
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/langganan.css' %}"> <!-- Page-specific CSS -->
+<link rel="stylesheet" href="{% static 'css/langganan.css' %}">
+ <!-- Page-specific CSS -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 {% endblock %}
@@ -17,7 +18,8 @@
             <div class="container pt-2 pb-2">
                 <div class="row">
                     <!-- Kolom untuk Teks -->
-                    <div class="col-12 col-sm-12 col-md-12 mb-2 d-flex flex-column justify-content-center align-items-center text-light">
+                    <div
+                        class="col-12 col-sm-12 col-md-12 mb-2 d-flex flex-column justify-content-center align-items-center text-light">
                         <p class="fs-cus pb-lg-0 text-secondary-custom justify-content-center text-center fw-bold mb-1">
                             Dapatkan Akses Video Pembelajaran dan Sesi mentoring bersama ahlinya
                         </p>
@@ -27,64 +29,64 @@
                             menulis sejak dini
                         </p>
                     </div>
-                <div class="row justify-content-center">
-                    <div class="col-6 col-sm-7 col-md-3 mb-2">
-                        <div class="card text-primary-custom border border-3">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Paket 1 Bulan</h5>
-                                <h5 class="card-title">Rp. 100.000</h5>
-                                <p class="card-text">Nikmati Akses tanpa limit selama 30 hari</p>
+                    <div class="row justify-content-center">
+                        <div class="col-6 col-sm-7 col-md-3 mb-2">
+                            <div class="card text-primary-custom border border-3">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Paket 1 Bulan</h5>
+                                    <h5 class="card-title">Rp. 100.000</h5>
+                                    <p class="card-text">Nikmati Akses tanpa limit selama 30 hari</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-7 col-md-3 mb-2">
+                            <div class="card text-primary-custom border border-3">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Paket 2 Bulan</h5>
+                                    <h5 class="card-title">Rp. 200.000</h5>
+                                    <p class="card-text">Nikmati Akses tanpa limit selama 60 hari</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-7 col-md-3 mb-2">
+                            <div class="card text-primary-custom border border-3">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Paket 3 Bulan</h5>
+                                    <h5 class="card-title">Rp. 300.000</h5>
+                                    <p class="card-text">Nikmati Akses tanpa limit selama 90 hari</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-7 col-md-3 mb-2">
-                        <div class="card text-primary-custom border border-3">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Paket 2 Bulan</h5>
-                                <h5 class="card-title">Rp. 200.000</h5>
-                                <p class="card-text">Nikmati Akses tanpa limit selama 60 hari</p>
+                    <div class="row justify-content-center mt-2">
+                        <div class="col-6 col-sm-7 col-md-3 mb-2">
+                            <div class="card text-primary-custom border border-3">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Paket 6 Bulan</h5>
+                                    <h5 class="card-title">Rp. 600.000</h5>
+                                    <p class="card-text">Nikmati Akses tanpa limit selama 180 hari</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-6 col-sm-7 col-md-3 mb-2">
+                            <div class="card text-primary-custom border border-3">
+                                <div class="card-body">
+                                    <h5 class="card-title fw-bold">Paket 1 Tahun</h5>
+                                    <h5 class="card-title">Rp. 1.200.000</h5>
+                                    <p class="card-text">Nikmati Akses tanpa limit selama 360 hari</p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-6 col-sm-7 col-md-3 mb-2">
-                        <div class="card text-primary-custom border border-3">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Paket 3 Bulan</h5>
-                                <h5 class="card-title">Rp. 300.000</h5>
-                                <p class="card-text">Nikmati Akses tanpa limit selama 90 hari</p>
-                            </div>
-                        </div>
-                    </div>
+                    <center>
+                        <a href="{% url 'subscription' %}">
+                            <button class="btn btn-primary mt-3 fw-bold btn-lg"
+                                style="background-color: white; color: #257180;">
+                                <i class="bi bi-bell-fill me-2"></i>Langganan Sekarang
+                            </button>
+                        </a>
+                    </center>
                 </div>
-                <div class="row justify-content-center mt-2">
-                    <div class="col-6 col-sm-7 col-md-3 mb-2">
-                        <div class="card text-primary-custom border border-3">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Paket 6 Bulan</h5>
-                                <h5 class="card-title">Rp. 600.000</h5>
-                                <p class="card-text">Nikmati Akses tanpa limit selama 180 hari</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-6 col-sm-7 col-md-3 mb-2">
-                        <div class="card text-primary-custom border border-3">
-                            <div class="card-body">
-                                <h5 class="card-title fw-bold">Paket 1 Tahun</h5>
-                                <h5 class="card-title">Rp. 1.200.000</h5>
-                                <p class="card-text">Nikmati Akses tanpa limit selama 360 hari</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <center>
-                    <a href="{% url 'subscription' %}">
-                        <button class="btn btn-primary mt-3 fw-bold btn-lg"
-                            style="background-color: white; color: #257180;">
-                            <i class="bi bi-bell-fill me-2"></i>Langganan Sekarang
-                        </button>
-                    </a>
-                </center>
-            </div>
         </section>
     </header>
     <main>
@@ -132,7 +134,7 @@
                     Anda perlu berlangganan untuk mengakses fitur ini. Silakan klik tombol di bawah untuk berlangganan.
                 </div>
                 <div class="modal-footer">
-                    <a href="{% url 'subscription' %}" class="btn btn-primary">Berlangganan Sekarang</a>
+                    <a href="{% url 'subscription' %}" class="btn btn-primary" style=" background-color: #257180">Berlangganan Sekarang</a>
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
                 </div>
             </div>
@@ -157,7 +159,8 @@
         </div>
     </div>
     {% if show_modal %}
-    <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel" aria-hidden="true">
+    <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel"
+        aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -218,8 +221,6 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-    
-
 </body>
 {% block extra_js %}
 <script src="{% static 'js/home.js' %}"></script>
