--- a/LenKa-Django/LensaKata/LensaKata_App/templates/tentangkami.html
+++ b/LenKa-Django/LensaKata/LensaKata_App/templates/tentangkami.html
@@ -5,6 +5,7 @@
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/home.css' %}">  <!-- Page-specific CSS -->
+    <link rel="stylesheet" href="{% static 'css/teka.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 {% endblock %}
@@ -17,7 +18,7 @@
                 <div class="row">
                     <!-- Kolom untuk Teks -->
                     <div class="col-12 col-sm-7 col-md-7 d-flex flex-column justify-content-center align-items-left text-light">
-                        <p class="fs-cus pb-lg-0 text-secondary-custom fw-bold mb-2">
+                        <p class="fs-1 pb-lg-0 text-secondary-custom fw-bold mb-2">
                             Apa itu Lensa Kata?
                         </p>
                         <p class="fs-5 text-secondary-custom d-flex align-self-start mb-3" style="width: 100%">
@@ -41,8 +42,8 @@
                     </div>
                     <!-- Kolom untuk Gambar -->
                     <div class="col-12 col-sm-5 col-md-5 d-flex justify-content-center align-items-center">
-                        <img src="{% static 'img/membaca.jpg' %}" class="img-cus img-cus-3 img-fluid"
-                            alt="Game Image" />
+                        <img src="{% static 'img/membaca.jpg' %}" class=" img-fluid"
+                            alt="" />
                     </div>
                 </div>
             </div>
