--- a/LensaKata_Django/LensaKata/LensaKata_App/templates/dashboard/langganan.html
+++ b/LensaKata_Django/LensaKata/LensaKata_App/templates/dashboard/langganan.html
@@ -64,23 +64,23 @@
   </nav>  
   <main class="content">
     <header>
-        <section class="d-flex align-items-center">
-            <div class="container pt-2 pb-2">
-                <div class="row">
-                    <!-- Kolom untuk Teks -->
-                    <div class="col-12 d-flex flex-column justify-content-center align-items-center text-light">
-                        <p class="fs-cus pb-lg-0 text-secondary-custom fw-bold mb-1">
-                            Dapatkan Akses Video Pembelajaran dan Sesi mentoring bersama ahlinya
-                        </p>
-                        <p class="fs-5 text-secondary-custom d-flex justify-content-center text-center mb-3"
-                            style="width: 100%">
-                            Berikan fondasi yang kuat untuk masa depannya dengan meningkatkan kemampuan membaca dan
-                            menulis sejak dini
-                        </p>
-                    </div>
+    <section class="d-flex align-items-center">
+        <div class="container pt-2 pb-2">
+            <div class="row">
+                <!-- Kolom untuk Teks -->
+                <div
+                    class="col-12 col-sm-12 col-md-12 mb-2 d-flex flex-column justify-content-center align-items-center text-light">
+                    <p class="fs-cus pb-lg-0 text-secondary-custom justify-content-center text-center fw-bold mb-1">
+                        Dapatkan Akses Video Pembelajaran dan Sesi mentoring bersama ahlinya
+                    </p>
+                    <p class="fs-cus pb-lg-0 col-12 col-sm-12 col-md-12 fs-5 text-secondary-custom d-flex justify-content-center text-center mb-3"
+                        style="width: 100%">
+                        Berikan fondasi yang kuat untuk masa depannya dengan meningkatkan kemampuan membaca dan
+                        menulis sejak dini
+                    </p>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-7 col-md-3 mb-2">
                         <div class="card text-primary-custom border border-3">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Paket 1 Bulan</h5>
@@ -89,7 +89,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-7 col-md-3 mb-2">
                         <div class="card text-primary-custom border border-3">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Paket 2 Bulan</h5>
@@ -98,7 +98,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-7 col-md-3 mb-2">
                         <div class="card text-primary-custom border border-3">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Paket 3 Bulan</h5>
@@ -108,8 +108,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="row justify-content-center mt-3">
-                    <div class="col-sm-3">
+                <div class="row justify-content-center mt-2">
+                    <div class="col-6 col-sm-7 col-md-3 mb-2">
                         <div class="card text-primary-custom border border-3">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Paket 6 Bulan</h5>
@@ -118,7 +118,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-3">
+                    <div class="col-6 col-sm-7 col-md-3 mb-2">
                         <div class="card text-primary-custom border border-3">
                             <div class="card-body">
                                 <h5 class="card-title fw-bold">Paket 1 Tahun</h5>
@@ -131,119 +131,149 @@
                 <center>
                     <a href="{% url 'subscription' %}">
                         <button class="btn btn-primary mt-3 fw-bold btn-lg"
-                            style="background-color: white; color: #257180;">Langganan Sekarang
+                            style="background-color: white; color: #257180;">
+                            <i class="bi bi-bell-fill me-2"></i>Langganan Sekarang
                         </button>
                     </a>
                 </center>
             </div>
-        </section>
-    </header>
-    <main>
-        <article class="container">
-            <h1 class="m-4 text-primary-custom text-center">Akses Premium</h1>
-            <div class="row justify-content-center mt-2">
-                <div class="col-sm-4 text-center mb-5">
-                    <div class="card text-primary-custom border border-3">
-                        <div class="card-body">
-                            <i class="bi bi-play-btn-fill" style="font-size: 70px;"></i>
-                            <h5 class="card-title fw-bold">Video Pembelajaran</h5>
-                            <p class="card-text">Video pembelajaran yang menarik seputar literasi dan mengarang</p>
-                            <a href="{% url 'kursus_list' %}" class="btn btn-primary" style="background-color: #257180">Mulai Belajar</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 text-center mb-5">
-                    <div class="card text-primary-custom">
-                        <div class="card-body border border-3">
-                            <i class="bi bi-chat-dots-fill" style="font-size: 70px;"></i>
-                            <h5 class="card-title fw-bold">Sesi Mentoring</h5>
-                            <p class="card-text">Sesi mentoring langsung bersama ahlinya seputar literasi dan
-                                mengarang</p>
-                            <a href="{% url 'mentoring' %}" class="btn btn-primary" style="background-color: #257180">Mulai Mentoring</a>
-                        </div>
+    </section>
+</header>
+</body>
+    <article class="container">
+        <h1 class="m-4 text-primary-custom text-center">Akses Premium</h1>
+        <div class="row justify-content-center mt-2">
+            <div class="col-12 col-sm-7 col-md-4 text-center mb-5">
+                <div class="card text-primary-custom border border-3">
+                    <div class="card-body">
+                        <i class="bi bi-play-btn-fill" style="font-size: 70px;"></i>
+                        <h5 class="card-title fw-bold">Video Pembelajaran</h5>
+                        <p class="card-text">Video pembelajaran yang menarik seputar literasi dan mengarang</p>
+                        <a href="#" id="btn-mulai-belajar">
+                            <button class="btn btn-primary" style=" background-color: #257180">Mulai
+                                Belajar</button>
+                        </a>
                     </div>
                 </div>
             </div>
-        </article>
-    </main>
-    <div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Silakan Berlangganan</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Anda perlu berlangganan untuk mengakses fitur ini. Silakan klik tombol di bawah untuk berlangganan.
-                </div>
-                <div class="modal-footer">
-                    <a href="{% url 'subscription' %}" class="btn btn-primary">Berlangganan Sekarang</a>
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+            <div class="col-12 col-sm-7 col-md-4 text-center mb-5">
+                <div class="card text-primary-custom">
+                    <div class="card-body border border-3">
+                        <i class="bi bi-chat-dots-fill" style="font-size: 70px;"></i>
+                        <h5 class="card-title fw-bold">Sesi Mentoring</h5>
+                        <p class="card-text">Sesi mentoring langsung bersama ahlinya seputar literasi dan
+                            mengarang</p>
+                        <a href="#" id="btn-mulai-mentoring">
+                            <button class="btn btn-primary" style=" background-color: #257180">Mulai
+                                Mentoring</button>
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="modal fade" id="paymentSuccessModal" tabindex="-1" aria-labelledby="paymentSuccessModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="paymentSuccessModalLabel">Pembayaran Berhasil</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    Pembayaran Anda berhasil! Kini Anda bisa menikmati akses ke semua kursus dan sesi mentoring di
-                    LensaKata.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
-                </div>
+    </article>
+</main>
+<div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Silakan Berlangganan</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Anda perlu berlangganan untuk mengakses fitur ini. Silakan klik tombol di bawah untuk berlangganan.
+            </div>
+            <div class="modal-footer">
+                <a href="{% url 'subscription' %}" class="btn btn-primary" style=" background-color: #257180">Berlangganan Sekarang</a>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
             </div>
         </div>
     </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            // Event listener untuk tombol Mulai Belajar
-            document.querySelector('#btn-mulai-belajar').addEventListener('click', function (e) {
-                e.preventDefault();
-                checkSubscription('/kursus/');
-            });
-
-            // Event listener untuk tombol Mulai Mentoring
-            document.querySelector('#btn-mulai-mentoring').addEventListener('click', function (e) {
-                e.preventDefault();
-                checkSubscription('/mentoring/');
-            });
-
-            function checkSubscription(redirectUrl) {
-                fetch('/check-subscription/')
-                    .then(response => response.json())
-                    .then(data => {
-                        if (data.status === "inactive") {
-                            // Jika tidak aktif, tampilkan modal
-                            $('#subscriptionModal').modal('show');
-                        } else {
-                            // Jika aktif, lanjutkan ke halaman yang sesuai
-                            window.location.href = redirectUrl;
-                        }
-                    })
-                    .catch(error => console.error('Error:', error));
-            }
+</div>
+<div class="modal fade" id="paymentSuccessModal" tabindex="-1" aria-labelledby="paymentSuccessModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="paymentSuccessModalLabel">Pembayaran Berhasil</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Pembayaran Anda berhasil! Kini Anda bisa menikmati akses ke semua kursus dan sesi mentoring di
+                LensaKata.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+            </div>
+        </div>
+    </div>
+</div>
+{% if show_modal %}
+<div class="modal fade" id="subscriptionModal" tabindex="-1" aria-labelledby="subscriptionModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="subscriptionModalLabel">Anda Tidak Memiliki Akses</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Silahkan berlangganan terlebih dahulu untuk bisa mengakses kursus ini.
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Tutup</button>
+            </div>
+        </div>
+    </div>
+</div>
+<script>
+    var myModal = new bootstrap.Modal(document.getElementById('subscriptionModal'));
+    myModal.show();
+</script>
+{% endif %}
+<script>
+    document.addEventListener('DOMContentLoaded', function () {
+        // Event listener untuk tombol Mulai Belajar
+        document.querySelector('#btn-mulai-belajar').addEventListener('click', function (e) {
+            e.preventDefault();
+            checkSubscription('/kursus/');
         });
 
-    </script>
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-          const urlParams = new URLSearchParams(window.location.search);
-          if (urlParams.get("payment_success") === "true") {
+        // Event listener untuk tombol Mulai Mentoring
+        document.querySelector('#btn-mulai-mentoring').addEventListener('click', function (e) {
+            e.preventDefault();
+            checkSubscription('/mentoring/');
+        });
+
+        function checkSubscription(redirectUrl) {
+            fetch('/check-subscription/')
+                .then(response => response.json())
+                .then(data => {
+                    if (data.status === "inactive") {
+                        // Jika tidak aktif, tampilkan modal
+                        $('#subscriptionModal').modal('show');
+                    } else {
+                        // Jika aktif, lanjutkan ke halaman yang sesuai
+                        window.location.href = redirectUrl;
+                    }
+                })
+                .catch(error => console.error('Error:', error));
+        }
+    });
+</script>
+<script>
+    document.addEventListener("DOMContentLoaded", function () {
+        const urlParams = new URLSearchParams(window.location.search);
+        if (urlParams.get("payment_success") === "true") {
             const paymentSuccessModal = new bootstrap.Modal(document.getElementById("paymentSuccessModal"));
             paymentSuccessModal.show();
-          }
-        });
-      </script>
+        }
+    });
+</script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 <script src="{% static 'js/home.js' %}"></script>
 <!-- Include jQuery from static or CDN (choose one) -->
 <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </html>
